tests/ui-nightly/transmute-ref-src-unsized.stderr
error[E0271]: type mismatch resolving `<[u8; 1] as KnownLayout>::PointerMetadata == usize`
  --> tests/ui-nightly/transmute-ref-src-unsized.rs:14:31
   |
14 | const SRC_UNSIZED: &[u8; 1] = transmute_ref!(&[0u8][..]);
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `()`
   |
   = note: required for `zerocopy::util::macro_util::Wrap<&[u8], &[u8; 1]>` to implement `zerocopy::util::macro_util::TransmuteRefDst<'_>`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
